Add bootstrap, navbar and placehold for map

--- a/index.html
+++ b/index.html
@@ -1,246 +1,60 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+<html>
+    <head>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width" />
+        <title>Voting Map Demo</title>
+    </head>
+    <body>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>	<script src="https://cdnjs.cloudflare.com/ajax/libs/proj4js/2.3.15/proj4.js"></script>
+        <script src="https://code.highcharts.com/highcharts.js"></script>
+        <script src="https://code.highcharts.com/maps/modules/map.js"></script>
+        <script src="https://code.highcharts.com/maps/modules/exporting.js"></script>
+        <script src="https://code.highcharts.com/maps/modules/offline-exporting.js"></script>
+        <script src="https://code.highcharts.com/mapdata/countries/in/in-all.js"></script>
+        <link rel="stylesheet" href="index.css" type="text/css" media="all" />
 
-    <link rel="stylesheet" type="text/css" href="main.css">
+        <!-- navbar section -->
+        <nav class="navbar navbar-expand-xl navbar-light">
+            <div class="container">
+                <a class="navbar-brand" href="/">
+                    <div class="brand-container">
+                        <div class="row">
+                            Ovote
+                        </div>
+                    </div>
+                </a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
 
-    <!--<script src="./node_modules/web3/dist/web3.min.js"></script>-->
-    <script src="https://cdn.rawgit.com/ethereum/web3.js/develop/dist/web3.js"></script>
-
-</head>
-<body>
-<div class="container">
-
-    <h1>Coursetro Instructor</h1>
-    <span id="countIns"></span>
-
-    <h2 id="instructor"></h2>
-    <span id="insTrans"></span>
-    <hr>
-
-    <img id="loader" src="https://loading.io/spinners/double-ring/lg.double-ring-spinner.gif">
-
-    <label for="fName" class="col-lg-2 control-label">First Name</label>
-    <input id="fName" type="text">
-
-    <label for="lName" class="col-lg-2 control-label">Last Name</label>
-    <input id="lName" type="text">
-
-    <label for="age" class="col-lg-2 control-label">Instructor Age</label>
-    <input id="age" type="text">
-
-    <button id="button">Update Instructor</button>
-
-</div>
-<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
-
-<script>
-
-    $("#loader").hide();
-    if (typeof web3 !== 'undefined') {
-        web3 = new Web3(web3.currentProvider);
-    } else {
-        // set the provider you want from Web3.providers
-        web3 = new Web3(new Web3.providers.HttpProvider("http://localhost:8545"));
-    }
-
-    let accounts=[
-        {
-            username: "saurav",
-            pin_salt: "asdfasdf",
-            address:"asdfasdf232",
-            private_key:"asfasdf231231"
-        },
-        {
-            username: "owais",
-            pin_salt: "sdfasdf",
-            address:"asdfasdf2SDF32",
-            private_key:"asfasdf2adsf31231"
-        }
-    ]
-
-    web3.eth.defaultAccount = web3.eth.accounts[0];
-
-    let CoursetroContract = web3.eth.contract([
-        {
-            "constant": true,
-            "inputs": [
-                {
-                    "name": "_address",
-                    "type": "address"
-                }
-            ],
-            "name": "getInstructor",
-            "outputs": [
-                {
-                    "name": "",
-                    "type": "uint256"
-                },
-                {
-                    "name": "",
-                    "type": "bytes16"
-                },
-                {
-                    "name": "",
-                    "type": "bytes16"
-                }
-            ],
-            "payable": false,
-            "stateMutability": "view",
-            "type": "function"
-        },
-        {
-            "constant": true,
-            "inputs": [],
-            "name": "getInstructors",
-            "outputs": [
-                {
-                    "name": "",
-                    "type": "address[]"
-                }
-            ],
-            "payable": false,
-            "stateMutability": "view",
-            "type": "function"
-        },
-        {
-            "constant": true,
-            "inputs": [
-                {
-                    "name": "",
-                    "type": "uint256"
-                }
-            ],
-            "name": "instructorAccts",
-            "outputs": [
-                {
-                    "name": "",
-                    "type": "address"
-                }
-            ],
-            "payable": false,
-            "stateMutability": "view",
-            "type": "function"
-        },
-        {
-            "constant": true,
-            "inputs": [],
-            "name": "who_am_i",
-            "outputs": [
-                {
-                    "name": "",
-                    "type": "address"
-                }
-            ],
-            "payable": false,
-            "stateMutability": "view",
-            "type": "function"
-        },
-        {
-            "constant": true,
-            "inputs": [],
-            "name": "countInstructors",
-            "outputs": [
-                {
-                    "name": "",
-                    "type": "uint256"
-                }
-            ],
-            "payable": false,
-            "stateMutability": "view",
-            "type": "function"
-        },
-        {
-            "constant": false,
-            "inputs": [
-                {
-                    "name": "_address",
-                    "type": "address"
-                },
-                {
-                    "name": "_age",
-                    "type": "uint256"
-                },
-                {
-                    "name": "_fName",
-                    "type": "bytes16"
-                },
-                {
-                    "name": "_lName",
-                    "type": "bytes16"
-                }
-            ],
-            "name": "setInstructor",
-            "outputs": [],
-            "payable": false,
-            "stateMutability": "nonpayable",
-            "type": "function"
-        },
-        {
-            "anonymous": false,
-            "inputs": [
-                {
-                    "indexed": false,
-                    "name": "fName",
-                    "type": "bytes16"
-                },
-                {
-                    "indexed": false,
-                    "name": "lName",
-                    "type": "bytes16"
-                },
-                {
-                    "indexed": false,
-                    "name": "age",
-                    "type": "uint256"
-                }
-            ],
-            "name": "instructorInfo",
-            "type": "event"
-        }
-    ]);
-
-    let Coursetro = CoursetroContract.at('0xadea051b7604e67dd7aeda401ef4135ed3d667ae');
-    console.log(Coursetro);
-
-
-
-    let instructorEvent = Coursetro.instructorInfo({}, 'latest');
-
-
-    instructorEvent.watch(function(error, result) {
-        if (result) {
-            if (result.blockHash != $("#insTrans").html())
-                $("#loader").hide();
-
-            $("#insTrans").html('Block hash: ' + result.blockHash);
-            $("#instructor").html(web3.toAscii(result.args.fName) + ' ' + web3.toAscii(result.args.lName) + ' (' + result.args.age + ' years old)');
-        } else {
-            $("#loader").hide();
-        }
-    });
-
-    Coursetro.countInstructors((err, res) => {
-        if (res)
-            $("#countIns").html(res.c + ' Instructors');
-    })
-
-    $("#button").click(function() {
-        $("#loader").show();
-        Coursetro.setInstructor(web3.eth.defaultAccount, $("#age").val(), $("#fName").val(), $("#lName").val(), (err, res) => {
-            if (err) {
-                $("#loader").hide();
-            }
-        });
-    });
-</script>
-
-</body>
+                <div class="collapse navbar-collapse justify-content-end align-items-center" id="navbarSupportedContent">
+                    <ul class="nav nav-pills">
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">How To Vote ?</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" data-toggle="modal" data-target="#contact-modal" href="#">Login</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+        <div class="row dashboard container-fluid">
+            <div class="col-8">
+                <div id="container"></div>
+            </div>
+            <div class="col-4">
+                <div class="row">
+                    barchart
+                </div>
+                <div class="row">
+                    api news
+                </div>
+            </div>
+        </div>
+        <script src="index.js"></script>
+    </body>
 </html>
-
-
-
