--- a/index.html
+++ b/index.html
@@ -12,9 +12,11 @@
         <script src="https://code.highcharts.com/highcharts.js"></script>
         <script src="https://code.highcharts.com/maps/modules/map.js"></script>
         <script src="https://code.highcharts.com/maps/modules/exporting.js"></script>
+        <script src="https://code.highcharts.com/modules/exporting.js"></script>
         <script src="https://code.highcharts.com/maps/modules/offline-exporting.js"></script>
         <script src="https://code.highcharts.com/mapdata/countries/in/in-all.js"></script>
         <link rel="stylesheet" href="index.css" type="text/css" media="all" />
+        <link rel="stylesheet" href="totalVotesBarChart.css" type="text/css" media="all" />
 
         <!-- navbar section -->
         <nav class="navbar navbar-expand-xl navbar-light">
@@ -43,12 +45,12 @@
             </div>
         </nav>
         <div class="row dashboard container-fluid">
-            <div class="col-8">
+            <div class="col-6">
                 <div id="container"></div>
             </div>
-            <div class="col-4">
+            <div class="col-6">
                 <div class="row">
-                    barchart
+                    <div id="totalVotesBarChart"></div>
                 </div>
                 <div class="row">
                     api news
@@ -56,5 +58,6 @@
             </div>
         </div>
         <script src="index.js"></script>
+        <script src="totalVotesBarChart.js"></script>
     </body>
 </html>
