--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
         <script src="https://code.highcharts.com/mapdata/countries/in/in-all.js"></script>
         <link rel="stylesheet" href="index.css" type="text/css" media="all" />
 
+        <!--web3 cdn-->
+        <script src="https://cdn.rawgit.com/ethereum/web3.js/develop/dist/web3.js"></script>
+
+
         <!-- navbar section -->
         <nav class="navbar navbar-expand-xl navbar-light">
             <div class="container">
